RESOLVED FIXED 242500
[Linux] Web Inspector: missing memory measurements in memory timeline
https://bugs.webkit.org/show_bug.cgi?id=242500
Summary [Linux] Web Inspector: missing memory measurements in memory timeline
Carlos Garcia Campos
Reported 2022-07-08 02:17:41 PDT
In linux we don't show memory information for image, layers and page categories. I don't think we can get image and layers, but at least we can add others category with the memory not in javascript categories. We can also not show the categories for which the memory is 0, because it's confusing.
Attachments
Carlos Garcia Campos
Comment 1 2022-07-08 02:21:58 PDT
EWS
Comment 2 2022-07-15 01:08:30 PDT
Committed 252496@main (ec374dbfec09): <https://commits.webkit.org/252496@main> Reviewed commits have been landed. Closing PR #2215 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-07-15 01:09:16 PDT
Note You need to log in before you can comment on or make changes to this bug.