Source/WebInspectorUI/UserInterface/Models/MemoryTimelineRecord.js
@@ -78,12 +78,16 @@ WI.MemoryTimelineRecord = class MemoryTimelineRecord extends WI.TimelineRecord
             }
         }
 
-        return [
-            {type: WI.MemoryCategory.Type.JavaScript, size: javascriptSize},
-            {type: WI.MemoryCategory.Type.Images, size: imagesSize},
-            {type: WI.MemoryCategory.Type.Layers, size: layersSize},
-            {type: WI.MemoryCategory.Type.Page, size: pageSize},
-        ];
+        let memoryCategories = [];
+        if (javascriptSize)
+            memoryCategories.push({type: WI.MemoryCategory.Type.JavaScript, size: javascriptSize});
+        if (imagesSize)
+            memoryCategories.push({type: WI.MemoryCategory.Type.Images, size: imagesSize});
+        if (layersSize)
+            memoryCategories.push({type: WI.MemoryCategory.Type.Layers, size: layersSize});
+        if (pageSize)
+            memoryCategories.push({type: WI.MemoryCategory.Type.Page, size: pageSize});
+        return memoryCategories;
     }
 
     // Import / Export
